--- a/config/config_dpo.yml
+++ b/config/config_dpo.yml
@@ -1,15 +1,75 @@
+name: "chatDPO_bot"
+display_name: "Chat ДПО"
+description: "Общие вопросы про Дополнительные Программы Образования в МЭИ"
+prompt: "Действуй как текстовый помощник-классификатор университета МЭИ. Запрос пользователя: '{question}'. Запрос относится к одной из перечисленных тем: {context}. Для работы с внешней системой твой ответ должен содержать только число - номер подходящей темы."
 categories:
-  dpo_common:
-    display_name: "ДПО Общие вопросы"
-    prompt: "prompt_dpo"
+  dpo_programms:
+    name: "dpo_programms"
+    display_name: "Программы ДПО"
+    description: "Вопросы про ПРОГРАММЫ обучения, курсы, специализации, изучаемые предметы, направления, например: расскажи о программе Х? есть ли что по Y? нужен курс по Z"
+    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. В ответе уточни,типы упоминаемых программ: повышения квалификации или профессиональной переподготовки. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
+    db_path: "./chroma_db"
+    collection_name: "dpo_programms"
     retriever: 
-      score_threshold: 0.185
-      k: 4
-      s: 4
+      score_threshold: 0.2
+      k: 1
+      s: 1
       t: 0
       next: 1
-      bm25: "5/100"
-default:
-  knowledge_base: "ДПО Общие вопросы"
-  db_path: "./chroma_db"
-stoplist: ["Усманов", "Новак"]
+      bm25: "4/50"
+  dpo_standards:
+    name: "dpo_standards"
+    display_name: "Профстандарты и ФГОСы в ДПО МЭИ"
+    description: "Общие вопросы про стандарты, ФГОСы, профстандарты, например, 'Где реализуется стандарт 38.03.02?'"
+    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. В ответе уточни,типы упоминаемых программ: повышения квалификации или профессиональной переподготовки. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
+    db_path: "./chroma_db"
+    collection_name: "dpo_standards"
+    retriever: 
+      score_threshold: 0.2
+      k: 1
+      s: 1
+      t: 0
+      next: 1
+      bm25: "3/25"
+  dpo_stats:
+    name: "dpo_stats"
+    display_name: "Статистика ДПО МЭИ"
+    description: "Статистические и обобщенные вопросы по программам ДПО МЭИ, типа 'Какая программасамая короткая, длинная, простая и др'"
+    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. В ответе уточни,типы упоминаемых программ: повышения квалификации или профессиональной переподготовки. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
+    db_path: "./chroma_db"
+    collection_name: "dpo_stats"
+    retriever: 
+      score_threshold: 0.2
+      k: 1
+      s: 1
+      t: 0
+      next: 1
+      bm25: "3/25" 
+  dpo_faq:
+    name: "dpo_faq"
+    display_name: "FAQ ДПО МЭИ"
+    description: "Общие терминологические и организационные вопросы по образованию, например 'чем отличается очная форма от заочной?'"
+    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
+    db_path: "./chroma_db"
+    collection_name: "dpo_faq"
+    retriever: 
+      score_threshold: 0.2
+      k: 1
+      s: 1
+      t: 0
+      next: 1
+      bm25: "3/25" 
+  common2:
+    name: "common2"
+    display_name: "Остальные вопросы"
+    description: "Все остальные вопросы и реплики не по делу иНЕ ОТНОСЯЩИЕСЯ к обучению, программам, стандартам, специальностям, предметам"
+    prompt: "Действуй как текстовый помощник университета МЭИ. На вопрос посетителя '{question}' вежливо попроси перефомулировать и предложи вариант текстового запроса, чтобы он был более явно связан с дополнительными программами образования в университете МЭИ: "
+common:
+  name: "common"
+  display_name: "Остальные вопросы"
+  description: "Все вопросы и реплики,НЕ ОТНОСЯЩИЕСЯ к обучению, программам, стандартам, предметам"
+  prompt: "Действуй как помощник-администратор университета МЭИ. На запрос посетителя {question} вежливо и кратко ответь, что ожидаются вопросы, связанные с дополнительными программами образования в университете МЭИ: "
+admins: [394104061]
+question_limit: 50
+bot_token:
+giga_creds:
