--- a/config/config_mpei.yml
+++ b/config/config_mpei.yml
@@ -1,7 +1,8 @@
 name: "mpei_doc_bot"
 display_name: "Док из МЭИ"
 description: "Общие вопросы про МЭИ"
-prompt: "Действуй как помощник-консультант университета МЭИ. К какой из тем относится следующий вопрос пользователя: {question}? Верни только численный номер наиболее подходящей темы: {context}."
+old_prompt: "Действуй как помощник-консультант университета МЭИ. К какой из тем относится следующий вопрос пользователя: {question}? Верни только численный номер наиболее подходящей темы: {context}."
+prompt: "Действуй как помощник-консультант университета МЭИ. Вопрос пользователя: {question}? Вопрос относится к одной из перечисленных тем: {context}. Для работы с внешней системой твой ответ должен содержать только число - номер подходящей темы."
 categories:
   common:
     name: "common"
@@ -67,5 +68,5 @@ categories:
     display_name: "Остальные вопросы"
     description: "Все остальные вопросы,НЕ ОТНОСЯЩИЕСЯ к университету и образованию"
     prompt: "Действуй как помощник-администратор университета МЭИ. На вопрос посетителя {question} нужен вежливый ответ с напоминанием, что ожидаются вопросы, свзяанные с университетом МЭИ и образовательным порцессом"
-  
-
+bot_token:
+giga_creds:
