--- a/config/config_dpo.yml
+++ b/config/config_dpo.yml
@@ -6,19 +6,20 @@ categories:
   dpo_programms:
     name: "dpo_programms"
     display_name: "Программы ДПО"
-    description: "Вопросы про ПРОГРАММЫ обучения, курсы, специализации, изучаемые предметы, направления, например: расскажи о программе Х? есть ли что по Y? нужен курс по Z"
-    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. В ответе уточни,типы упоминаемых программ: повышения квалификации или профессиональной переподготовки. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
+    description: "Любые вопросы про обучение, программы, курсы, изучаемые предметы, профстандарты, например: расскажи о программе Х? какая стоимость Y? нужен курс по Z"
+    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. Если в данных имеется информация о подходящей программе, то уточни ее тип (повышение квалификации или профессиональная переподготовка) и выведи имеющуюся информацию. Иначе кратко посоветуй обратиться к человеку-специалисту. Далее сформулируй ТОЧНЫЙ и вежливый ответ: "
     db_path: "./chroma_db"
     collection_name: "dpo_programms"
     retriever: 
-      score_threshold: 0.2
-      k: 1
-      s: 1
+      score_threshold: 0.1
+      k: 2
+      s: 2
       t: 0
       next: 1
-      bm25: "4/50"
+      bm25: "3/100"
   dpo_standards:
     name: "dpo_standards"
+    inactive: "true"
     display_name: "Профстандарты и ФГОСы в ДПО МЭИ"
     description: "Общие вопросы про стандарты, ФГОСы, профстандарты, например, 'Где реализуется стандарт 38.03.02?'"
     prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. В ответе уточни,типы упоминаемых программ: повышения квалификации или профессиональной переподготовки. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
@@ -33,8 +34,9 @@ categories:
       bm25: "3/25"
   dpo_stats:
     name: "dpo_stats"
+    inactive: "true"
     display_name: "Статистика ДПО МЭИ"
-    description: "Статистические и обобщенные вопросы по программам ДПО МЭИ, типа 'Какая программасамая короткая, длинная, простая и др'"
+    description: "Статистические и обобщенные вопросы по программам ДПО МЭИ, типа 'Какая программа самая короткая, длинная, простая и др'"
     prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. В ответе уточни,типы упоминаемых программ: повышения квалификации или профессиональной переподготовки. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
     db_path: "./chroma_db"
     collection_name: "dpo_stats"
@@ -49,7 +51,7 @@ categories:
     name: "dpo_faq"
     display_name: "FAQ ДПО МЭИ"
     description: "Общие терминологические и организационные вопросы по образованию, например 'чем отличается очная форма от заочной?'"
-    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. Если данных не хвататет, то посоветуй обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, развернутый, вежливый ответ: "
+    prompt: "Действуй как помощник-консультант университета МЭИ. Доступные данные: {context}. Вопрос пользователя: '{question}'. Дай точный ответ. Если данных не хвататет, то посоветуй переформулировать вопрос или обратиться к человеку-специалисту. Далее с новой строки сформулируй ТОЧНЫЙ, вежливый ответ: "
     db_path: "./chroma_db"
     collection_name: "dpo_faq"
     retriever: 
@@ -59,16 +61,11 @@ categories:
       t: 0
       next: 1
       bm25: "3/25" 
-  common2:
-    name: "common2"
+  common:
+    name: "common"
     display_name: "Остальные вопросы"
-    description: "Все остальные вопросы и реплики не по делу иНЕ ОТНОСЯЩИЕСЯ к обучению, программам, стандартам, специальностям, предметам"
-    prompt: "Действуй как текстовый помощник университета МЭИ. На вопрос посетителя '{question}' вежливо попроси перефомулировать и предложи вариант текстового запроса, чтобы он был более явно связан с дополнительными программами образования в университете МЭИ: "
-common:
-  name: "common"
-  display_name: "Остальные вопросы"
-  description: "Все вопросы и реплики,НЕ ОТНОСЯЩИЕСЯ к обучению, программам, стандартам, предметам"
-  prompt: "Действуй как помощник-администратор университета МЭИ. На запрос посетителя {question} вежливо и кратко ответь, что ожидаются вопросы, связанные с дополнительными программами образования в университете МЭИ: "
+    description: "Все вопросы и реплики,НЕ ОТНОСЯЩИЕСЯ к обучению, программам, стандартам, предметам"
+    prompt: "Действуй как помощник-администратор университета МЭИ. На запрос посетителя {question} вежливо и кратко ответь, что ожидаются вопросы, связанные с дополнительными программами образования в университете МЭИ: "
 admins: [394104061]
 question_limit: 50
 bot_token:
